--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frenzy Deets!!!</title>
+    <title>Frenzy Deets!</title>
 </head>
 <body>
-    Hello Deets!!!!
+    Hello Deets!
 </body>
 </html>
